# cf-compound-selection

./: .gitignore  README.md
agent/: README.md  api.py  birdhouse_backend_env.yml  pyproject.toml
agent/drug_fibrosis_agent/: __init__.py  agent.py
agent/examples/: givinostat.py  givinostat_evaluation.json
agent/tests/: test_agent.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/analyze/: page.js  (+1 more)
frontend/.next/server/vendor-chunks/: @radix-ui.js  @swc.js  class-variance-authority.js  clsx.js  goober.js  next.js  react-hot-toast.js  tailwind-merge.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: webpack.ba564b1fde84c060.hot-update.js  webpack.f2cf3a9539e2ccd8.hot-update.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/src/app/: layout.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/deploy/: page.tsx
frontend/src/components/: navbar.tsx
frontend/src/components/ui/: textarea.tsx
frontend/src/context/: AnalysisContext.tsx
mvp_eval/: README.md  mvp_eval.ipynb  mvp_eval.py  requirements.yml
(+12 files in other folders)
